WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18866
SQUIRRELFISH: JS/ObjC bridge is broken
https://bugs.webkit.org/show_bug.cgi?id=18866
Summary
SQUIRRELFISH: JS/ObjC bridge is broken
Maciej Stachowiak
Reported
2008-05-03 01:32:15 PDT
JS <--> ObjC briding seems broken in SqirrelFish, leading at least the following tests to fail: editing/pasteboard/paste-RTFD.html editing/pasteboard/paste-TIFF.html platform/mac/editing/pasteboard/5583362.html platform/mac/plugins/bindings-test-objc.html plugins/jsobjc-simple.html
Attachments
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2008-05-06 20:40:54 PDT
Landed
r32937
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug