WebCore/bridge/objc/objc_instance.h
@@ -48,8 +48,8 @@ public:
         
     virtual JSValue *valueOf() const;
     virtual JSValue *defaultValue(JSType hint) const;
-
-    virtual bool implementsCall() const;
+    
+    virtual CallType getCallData(CallData&);
     
     virtual JSValue *invokeMethod(ExecState *exec, const MethodList &method, const List &args);
     virtual JSValue *invokeDefaultMethod(ExecState *exec, const List &args);
